@@ -12,4 +12,5 @@ ADD_SUBDIRECTORY(t8)
 ADD_SUBDIRECTORY(t9)
 ADD_SUBDIRECTORY(t10)
 ADD_SUBDIRECTORY(t11)
+ADD_SUBDIRECTORY(t12)
 
