@@ -79,9 +79,6 @@ namespace Qyoto {
 			get {
 				return Property("displayText").Value<string>();
 			}
-			set {
-				SetProperty("displayText", QVariant.FromValue<string>(value));
-			}
 		}
 		public int CursorPosition {
 			get {
@@ -111,16 +108,10 @@ namespace Qyoto {
 			get {
 				return Property("hasSelectedText").Value<bool>();
 			}
-			set {
-				SetProperty("hasSelectedText", QVariant.FromValue<bool>(value));
-			}
 		}
 		public string SelectedText {
 			get {
 				return Property("selectedText").Value<string>();
-			}
-			set {
-				SetProperty("selectedText", QVariant.FromValue<string>(value));
 			}
 		}
 		public bool DragEnabled {
@@ -143,24 +134,15 @@ namespace Qyoto {
 			get {
 				return Property("undoAvailable").Value<bool>();
 			}
-			set {
-				SetProperty("undoAvailable", QVariant.FromValue<bool>(value));
-			}
 		}
 		public bool RedoAvailable {
 			get {
 				return Property("redoAvailable").Value<bool>();
 			}
-			set {
-				SetProperty("redoAvailable", QVariant.FromValue<bool>(value));
-			}
 		}
 		public bool AcceptableInput {
 			get {
 				return Property("acceptableInput").Value<bool>();
-			}
-			set {
-				SetProperty("acceptableInput", QVariant.FromValue<bool>(value));
 			}
 		}
 		// int qt_metacall(QMetaObject::Call arg1,int arg2,void** arg3); >>>> NOT CONVERTED
