@@ -41,9 +41,6 @@ namespace Qyoto {
 			get {
 				return Property("count").Value<int>();
 			}
-			set {
-				SetProperty("count", QVariant.FromValue<int>(value));
-			}
 		}
 		// int qt_metacall(QMetaObject::Call arg1,int arg2,void** arg3); >>>> NOT CONVERTED
 		public QStackedWidget(QWidget parent) : this((Type) null) {
