@@ -59,9 +59,6 @@ namespace Qyoto {
 			get {
 				return Property("count").Value<int>();
 			}
-			set {
-				SetProperty("count", QVariant.FromValue<int>(value));
-			}
 		}
 		public bool DrawBase {
 			get {
