@@ -67,9 +67,6 @@ namespace Qyoto {
 			get {
 				return Property("count").Value<int>();
 			}
-			set {
-				SetProperty("count", QVariant.FromValue<int>(value));
-			}
 		}
 		public QSize IconSize {
 			get {
