@@ -42,9 +42,6 @@ namespace Qyoto {
 			get {
 				return Property("topLevelItemCount").Value<int>();
 			}
-			set {
-				SetProperty("topLevelItemCount", QVariant.FromValue<int>(value));
-			}
 		}
 		// int qt_metacall(QMetaObject::Call arg1,int arg2,void** arg3); >>>> NOT CONVERTED
 		public QTreeWidget(QWidget parent) : this((Type) null) {
